fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html, body {
   height: 100%;
   width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 /* Navbar styling */
